force-app/main/default/objects/Proposal__c/fields/Present_Past_Relevant_Research_Grants__c.field-meta.xml
<CustomField>
    <fullName>Present_Past_Relevant_Research_Grants__c</fullName>
    <description>Your present/past relevant research grants</description>
    <inlineHelpText>Your present/past relevant research grants</inlineHelpText>
    <label>Present/Past Relevant Research Grants</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>