force-app/main/default/objects/Proposal__c/fields/Previous_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Previous_Collaboration__c</fullName>
    <description>Have you previously worked with the proposed Fellowship Supervisor or in the Host environment? Explain the duration and nature of the collaboration: joint outputs, data, publications or methods if any.</description>
    <inlineHelpText>Have you previously worked with the proposed Fellowship Supervisor or in the Host environment? Explain the duration and nature of the collaboration: joint outputs, data, publications or methods if any.</inlineHelpText>
    <label>Previous Collaboration</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>