force-app/main/default/objects/Proposal__c/fields/Procedure_to_Minimize_Stress_Pain_Animal__c.field-meta.xml
<CustomField>
    <fullName>Procedure_to_Minimize_Stress_Pain_Animal__c</fullName>
    <description>Describe procedures to be implemented to minimize stress and pain to the animal</description>
    <inlineHelpText>Describe procedures to be implemented to minimize stress and pain to the animal</inlineHelpText>
    <label>Procedure to Minimize Stress Pain Animal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>