force-app/main/default/objects/Proposal__c/fields/Project_Data_Management_Sharing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Project_Data_Management_Sharing_Plan__c</fullName>
    <description>Share your plan on how you will manage and share the data generated from this project</description>
    <inlineHelpText>Share your plan on how you will manage and share the data generated from this project</inlineHelpText>
    <label>Project Data Management &amp; Sharing Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>