force-app/main/default/objects/Proposal__c/fields/Projection_of_publications__c.field-meta.xml
<CustomField>
    <fullName>Projection_of_publications__c</fullName>
    <description>Projection of publications</description>
    <inlineHelpText>Projection of publications</inlineHelpText>
    <label>Projection of publications</label>
    <length>7768</length>
    <type>Html</type>
</CustomField>