force-app/main/default/objects/Proposal__c/fields/Proposal_In_Basic_Biomedical_Research__c.field-meta.xml
<CustomField>
    <fullName>Proposal_In_Basic_Biomedical_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm that your proposal is in the area of basic biomedical research</description>
    <inlineHelpText>Confirm that your proposal is in the area of basic biomedical research</inlineHelpText>
    <label>Proposal In Basic Biomedical Research</label>
    <type>Checkbox</type>
</CustomField>