force-app/main/default/objects/Proposal__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Eligibility Check</fullName>
            </value>
            <value>
                <fullName>Prelim Review</fullName>
            </value>
            <value>
                <fullName>Shortlisting</fullName>
            </value>
            <value>
                <fullName>Full Application</fullName>
            </value>
            <value>
                <fullName>Peer_Eligibility_Check</fullName>
                <label>Peer Eligibility Check</label>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>Peer Shortlisting</fullName>
            </value>
            <value>
                <fullName>Committee Review</fullName>
            </value>
            <value>
                <fullName>Chair/Co-Chair</fullName>
            </value>
            <value>
                <fullName>Committee Shortlisting</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Final Decision</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Award Letter Issuance</fullName>
                <isActive>false</isActive>
                <label>Award Letter Issuance</label>
            </value>
            <value>
                <fullName>Reviewer Assigned</fullName>
                <isActive>false</isActive>
                <label>Reviewer Assigned</label>
            </value>
            <value>
                <fullName>Under Award</fullName>
                <isActive>false</isActive>
                <label>Under Award</label>
            </value>
            <value>
                <fullName>Under Decision</fullName>
                <isActive>false</isActive>
                <label>Under Decision</label>
            </value>
            <value>
                <fullName>Under Grant</fullName>
                <isActive>false</isActive>
                <label>Under Grant</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>