force-app/main/default/objects/Proposal__c/fields/Proposed_Research_highlighting_Elements__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Research_highlighting_Elements__c</fullName>
    <description>Provide a summary of the proposed research highlighting the following elements in the order given below.</description>
    <inlineHelpText>Provide a summary of the proposed research highlighting the following elements in the order given below.</inlineHelpText>
    <label>Proposed Research highlighting Elements</label>
    <length>13000</length>
    <type>Html</type>
</CustomField>