force-app/main/default/objects/Proposal__c/fields/Protocol_for_waste_management__c.field-meta.xml
<CustomField>
    <fullName>Protocol_for_waste_management__c</fullName>
    <description>What is the protocol for waste management?</description>
    <inlineHelpText>What is the protocol for waste management?</inlineHelpText>
    <label>Protocol for waste management?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>