force-app/main/default/objects/Proposal__c/fields/Purchase_cost_Year3__c.field-meta.xml
<CustomField>
    <fullName>Purchase_cost_Year3__c</fullName>
    <label>Purchase cost Year3</label>
    <summarizedField>Animals__c.Purchase_cost_Year3__c</summarizedField>
    <summaryForeignKey>Animals__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>