force-app/main/default/objects/Proposal__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>