force-app/main/default/objects/Proposal__c/fields/Reason_for_Rejection_before_Committee__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection_before_Committee__c</fullName>
    <label>Reason for Rejection before Committee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>