force-app/main/default/objects/Proposal__c/fields/Recommended_for_Chair_Co_Chair_Stage__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Chair_Co_Chair_Stage__c</fullName>
    <label>Recommended for Chair/Co-Chair Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>