force-app/main/default/objects/Proposal__c/fields/Recommended_for_Committee_Review__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Committee_Review__c</fullName>
    <label>Recommended for Committee Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>