force-app/main/default/objects/Proposal__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <description>References</description>
    <inlineHelpText>References</inlineHelpText>
    <label>References</label>
    <length>52768</length>
    <type>Html</type>
</CustomField>