force-app/main/default/objects/Proposal__c/fields/Require_Informed_Consent_from_Study_Pop__c.field-meta.xml
<CustomField>
    <fullName>Require_Informed_Consent_from_Study_Pop__c</fullName>
    <description>Does your proposal require informed consent from study population?</description>
    <inlineHelpText>Does your proposal require informed consent from study population?</inlineHelpText>
    <label>Require Informed Consent from Study Pop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>