force-app/main/default/objects/Proposal__c/fields/Research_Plan__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan__c</fullName>
    <description>Research Plan</description>
    <inlineHelpText>Research Plan</inlineHelpText>
    <label>Research Plan</label>
    <length>90768</length>
    <type>Html</type>
</CustomField>