force-app/main/default/objects/Proposal__c/fields/Research_references__c.field-meta.xml
<CustomField>
    <fullName>Research_references__c</fullName>
    <description>Research references</description>
    <inlineHelpText>Research references</inlineHelpText>
    <label>Research references</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>