force-app/main/default/objects/Proposal__c/fields/Research_Summary_During_Highest_Degree__c.field-meta.xml
<CustomField>
    <fullName>Research_Summary_During_Highest_Degree__c</fullName>
    <description>Summary of the research work carried out during PhD/MD or other highest degree.</description>
    <inlineHelpText>Summary of the research work carried out during PhD/MD or other highest degree.</inlineHelpText>
    <label>Research Summary During Highest Degree</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>