force-app/main/default/objects/Proposal__c/fields/Research_Title__c.field-meta.xml
<CustomField>
    <fullName>Research_Title__c</fullName>
    <label>Research Title</label>
    <type>TextArea</type>
</CustomField>