force-app/main/default/objects/Proposal__c/fields/Reviewer_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Feedback_Summary__c</fullName>
    <label>Reviewer Feedback Summary</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>