force-app/main/default/objects/Proposal__c/fields/Risk_Identified__c.field-meta.xml
<CustomField>
    <fullName>Risk_Identified__c</fullName>
    <description>Does the proposed research or its outcomes pose risk of being misused for harmful purposes</description>
    <inlineHelpText>Does the proposed research or its outcomes pose risk of being misused for harmful purposes</inlineHelpText>
    <label>Risk Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>