force-app/main/default/objects/Proposal__c/fields/Risks_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risks_Mitigation__c</fullName>
    <description>Risks &amp; Mitigation</description>
    <inlineHelpText>Risks &amp; Mitigation</inlineHelpText>
    <label>Risks &amp; Mitigation</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>