force-app/main/default/objects/Proposal__c/fields/Sample_Size_Justif_Power_Calc_Incl_Excl__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size_Justif_Power_Calc_Incl_Excl__c</fullName>
    <description>Sample size justification and Power calculations with exclusion and inclusion criteria including Inclusion and exclusion criteria</description>
    <inlineHelpText>Sample size justification and Power calculations with exclusion and inclusion criteria including Inclusion and exclusion criteria</inlineHelpText>
    <label>Sample Size Justif Power Calc Incl-Excl</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>