force-app/main/default/objects/Proposal__c/fields/Scientific_career_to_date__c.field-meta.xml
<CustomField>
    <fullName>Scientific_career_to_date__c</fullName>
    <label>Scientific career to date</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>