force-app/main/default/objects/Proposal__c/fields/Scientific_Medical_Academic_colleagues__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Medical_Academic_colleagues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you propose to Collaborate with Scientific/Medical/Academic colleagues colleagues for part of your fellowship?</description>
    <inlineHelpText>Do you propose to Collaborate with Scientific/Medical/Academic colleagues colleagues for part of your fellowship?</inlineHelpText>
    <label>Scientific/Medical/Academic colleagues</label>
    <type>Checkbox</type>
</CustomField>