force-app/main/default/objects/Proposal__c/fields/Scientific_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Meetings__c</fullName>
    <label>Scientific Meetings</label>
    <length>15768</length>
    <type>Html</type>
</CustomField>