force-app/main/default/objects/Proposal__c/fields/Severity_of_Procedures_on_Animals__c.field-meta.xml
<CustomField>
    <fullName>Severity_of_Procedures_on_Animals__c</fullName>
    <description>What would be the severity of the procedures on the animals?</description>
    <inlineHelpText>What would be the severity of the procedures on the animals?</inlineHelpText>
    <label>Severity of Procedures on Animals</label>
    <type>TextArea</type>
</CustomField>