force-app/main/default/objects/Proposal__c/fields/Significance_of_the_proposed_work__c.field-meta.xml
<CustomField>
    <fullName>Significance_of_the_proposed_work__c</fullName>
    <description>Describe the significance of the proposed work to the field and its role in establishing you in the area, and your capability to deliver the proposed objectives.</description>
    <inlineHelpText>Describe the significance of the proposed work to the field and its role in establishing you in the area, and your capability to deliver the proposed objectives.</inlineHelpText>
    <label>Significance of the proposed work</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>