force-app/main/default/objects/Proposal__c/fields/Sponsor_Department__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Department__c</fullName>
    <label>Sponsor Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>