force-app/main/default/objects/Proposal__c/fields/Sponsor_Designation__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Designation__c</fullName>
    <label>Sponsor Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>