force-app/main/default/objects/Proposal__c/fields/Sponsor_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Organisation__c</fullName>
    <label>Sponsor Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>