force-app/main/default/objects/Proposal__c/fields/Start_Date_of_Host_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Host_Appointment__c</fullName>
    <description>Start date of appointment at the Host Institution</description>
    <inlineHelpText>Start date of appointment at the Host Institution</inlineHelpText>
    <label>Start Date of Host Appointment</label>
    <type>Date</type>
</CustomField>