force-app/main/default/objects/Proposal__c/fields/Status_at_the_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Status_at_the_Host_Institution__c</fullName>
    <label>Status at the Host Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>