force-app/main/default/objects/Proposal__c/fields/Study_elements_as_applicable__c.field-meta.xml
<CustomField>
    <fullName>Study_elements_as_applicable__c</fullName>
    <description>Study elements, as applicable</description>
    <inlineHelpText>Study elements, as applicable</inlineHelpText>
    <label>Study elements, as applicable</label>
    <length>22768</length>
    <type>Html</type>
</CustomField>