force-app/main/default/objects/Proposal__c/fields/Summary_of_Non_Specialist_Audience__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Non_Specialist_Audience__c</fullName>
    <description>Summary of the proposed research for non-specialist audience.</description>
    <inlineHelpText>Summary of the proposed research for non-specialist audience.</inlineHelpText>
    <label>Summary of Non-Specialist Audience</label>
    <length>13000</length>
    <type>Html</type>
</CustomField>