force-app/main/default/objects/Proposal__c/fields/Title_of_Thesis_Dissertation__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Thesis_Dissertation__c</fullName>
    <label>Title of Thesis/Dissertation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>