force-app/main/default/objects/Proposal__c/fields/Want_Restricted_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Want_Restricted_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I want to Add a restricted reviewer</description>
    <inlineHelpText>I want to Add a restricted reviewer</inlineHelpText>
    <label>Want Restricted Reviewer</label>
    <type>Checkbox</type>
</CustomField>