force-app/main/default/objects/Proposal__c/fields/What_other_animals_are_to_be_used__c.field-meta.xml
<CustomField>
    <fullName>What_other_animals_are_to_be_used__c</fullName>
    <description>What other animals are to be used?</description>
    <inlineHelpText>What other animals are to be used?</inlineHelpText>
    <label>What other animals are to be used?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>