force-app/main/default/objects/Proposal__c/fields/Which_of_the_following_species_are_used__c.field-meta.xml
<CustomField>
    <fullName>Which_of_the_following_species_are_used__c</fullName>
    <description>Which of the following species are used?</description>
    <inlineHelpText>Which of the following species are used?</inlineHelpText>
    <label>Which of the following species are used?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodents</fullName>
            </value>
            <value>
                <fullName>Primate</fullName>
            </value>
            <value>
                <fullName>Equidae</fullName>
            </value>
            <value>
                <fullName>Genetically Altered</fullName>
            </value>
            <value>
                <fullName>Other Animals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>