force-app/main/default/objects/Proposal__c/fields/Why_Animal_Use_Necessary_Other_Approach__c.field-meta.xml
<CustomField>
    <fullName>Why_Animal_Use_Necessary_Other_Approach__c</fullName>
    <description>Why is animal use necessary: are there any other possible approaches?</description>
    <inlineHelpText>Why is animal use necessary: are there any other possible approaches?</inlineHelpText>
    <label>Why Animal Use Necessary-Other Approach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>