force-app/main/default/objects/Proposal__c/fields/Why_FH_Host_is_Suitable_Choice__c.field-meta.xml
<CustomField>
    <fullName>Why_FH_Host_is_Suitable_Choice__c</fullName>
    <description>Explain why the Fellowship Supervisor/ Host Laboratory is a suitable choice to conduct the proposed research work.</description>
    <inlineHelpText>Explain why the Fellowship Supervisor/ Host Laboratory is a suitable choice to conduct the proposed research work.</inlineHelpText>
    <label>Why FH/Host is Suitable Choice</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>