force-app/main/default/objects/Proposal__c/fields/Why_these_species_are_most_appropriate__c.field-meta.xml
<CustomField>
    <fullName>Why_these_species_are_most_appropriate__c</fullName>
    <description>Why is/are the species the most appropriate?</description>
    <inlineHelpText>Why is/are the species the most appropriate?</inlineHelpText>
    <label>Why these species are most appropriate?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>