force-app/main/default/objects/Proposal__c/fields/Will_the_proposed_research_use__c.field-meta.xml
<CustomField>
    <fullName>Will_the_proposed_research_use__c</fullName>
    <description>Will the proposed research use or need any of the following?</description>
    <inlineHelpText>Will the proposed research use or need any of the following?</inlineHelpText>
    <label>Will the proposed research use ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use of patented/IP technology</fullName>
            </value>
            <value>
                <fullName>Agreements with commercial/academic/other organisations</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>