force-app/main/default/objects/Proposal__c/fields/Work_leading_up_to_the_Project__c.field-meta.xml
<CustomField>
    <fullName>Work_leading_up_to_the_Project__c</fullName>
    <description>Work leading up to the Project</description>
    <inlineHelpText>Work leading up to the Project</inlineHelpText>
    <label>Work leading up to the Project</label>
    <length>17768</length>
    <type>Html</type>
</CustomField>