force-app/main/default/objects/Proposal__c/recordTypes/Career_Development_Grants_CDG.recordType-meta.xml
<RecordType>
    <fullName>Career_Development_Grants_CDG</fullName>
    <active>true</active>
    <label>Career Development Grants [CDG]</label>
</RecordType>