force-app/main/default/objects/Proposal__c/recordTypes/Catalytic_Collaborative_Grants_CCG.recordType-meta.xml
<RecordType>
    <fullName>Catalytic_Collaborative_Grants_CCG</fullName>
    <active>true</active>
    <label>Catalytic Collaborative Grants [CCG]</label>
</RecordType>