force-app/main/default/objects/Proposal__c/recordTypes/Clinical_and_Public_Health_Early_Career_Research_Fellowship_CPHE.recordType-meta.xml
<RecordType>
    <fullName>Clinical_and_Public_Health_Early_Career_Research_Fellowship_CPHE</fullName>
    <active>true</active>
    <label>Clinical and Public Health Early Career Research Fellowship – [CPHE]</label>
</RecordType>