force-app/main/default/objects/Proposal__c/recordTypes/Clinical_and_Public_Health_Intermediate_Research_Fellowship_CPHI.recordType-meta.xml
<RecordType>
    <fullName>Clinical_and_Public_Health_Intermediate_Research_Fellowship_CPHI</fullName>
    <active>true</active>
    <label>Clinical and Public Health Intermediate Research Fellowship - [CPHI]</label>
</RecordType>