force-app/main/default/objects/Proposal__c/recordTypes/Early_Career_Fellowship_Basic_ECF.recordType-meta.xml
<RecordType>
    <fullName>Early_Career_Fellowship_Basic_ECF</fullName>
    <active>true</active>
    <label>Early Career Fellowship - Basic [ECF]</label>
</RecordType>