force-app/main/default/objects/Proposal__c/recordTypes/Intermediate_Fellowship_Basic.recordType-meta.xml
<RecordType>
    <fullName>Intermediate_Fellowship_Basic</fullName>
    <active>true</active>
    <label>Intermediate Fellowship - Basic</label>
</RecordType>