force-app/main/default/objects/Proposal__c/recordTypes/Multi_institutional_Collaborative_Grants_MCG.recordType-meta.xml
<RecordType>
    <fullName>Multi_institutional_Collaborative_Grants_MCG</fullName>
    <active>true</active>
    <label>Multi-institutional Collaborative Grants [MCG]</label>
</RecordType>