force-app/main/default/objects/Proposal__c/recordTypes/RM_Fellowships_RMF.recordType-meta.xml
<RecordType>
    <fullName>RM_Fellowships_RMF</fullName>
    <active>true</active>
    <label>RM Fellowships [RMF]</label>
</RecordType>