force-app/main/default/objects/Proposal__c/recordTypes/RM_Grants_RMG.recordType-meta.xml
<RecordType>
    <fullName>RM_Grants_RMG</fullName>
    <active>true</active>
    <label>RM Grants [RMG]</label>
</RecordType>