force-app/main/default/objects/Proposal__c/recordTypes/RM_Travel_Bursaries_RMTB.recordType-meta.xml
<RecordType>
    <fullName>RM_Travel_Bursaries_RMTB</fullName>
    <active>true</active>
    <label>RM Travel Bursaries [RMTB]</label>
</RecordType>