force-app/main/default/objects/Proposal__c/validationRules/Reason_is_mandatory_when_stage_is_reject.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_mandatory_when_stage_is_reject</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL(Proposal_Status__c, &quot;Rejected&quot;), 
  ISBLANK(TRIM(Reason_for_Rejection__c)) 
)</errorConditionFormula>
    <errorMessage>Reason for Rejection is required for rejected proposals.</errorMessage>
</ValidationRule>