force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Application_Stages__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Project_Title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>