force-app/main/default/objects/Proposal__c/listViews/Assigned_Proposals_List.listView-meta.xml
<ListView>
    <fullName>Assigned_Proposals_List</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Project_Title__c</columns>
    <columns>Research_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Proposal__c.Intermediate_Fellowship_Basic</value>
    </filters>
    <label>Assigned Proposals List</label>
</ListView>