force-app/main/default/objects/Proposal__c/listViews/CPHE_Submitted_Proposals.listView-meta.xml
<ListView>
    <fullName>CPHE_Submitted_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Project_Title__c</columns>
    <columns>Research_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Proposal__c.Clinical_and_Public_Health_Early_Career_Research_Fellowship_CPHE</value>
    </filters>
    <label>CHPE - Submitted Proposals</label>
</ListView>