force-app/main/default/objects/Proposal__c/listViews/Draft_Proposals.listView-meta.xml
<ListView>
    <fullName>Draft_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Project_Title__c</columns>
    <columns>Research_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Draft Proposals</label>
</ListView>